# pex_simple_cli

./: README.md  pyproject.toml
src/cli_pex/: __init__.py  cli_base.py
